# gist-sync

./: .dir-locals.el  .dockerignore  .gitignore  Dockerfile.nix-cross-android  android.mk  dependency.nix  gist-sync.cabal  stack.yaml
app/: App.hs  Main.hs  SyncState.hs  SyncStrategy.hs  UI.hs  Utils.hs
app/App/: Brick.hs  Core.hs  Text.hs  Types.hs  UI.hs
app/App/Brick/: App.hs  Types.hs  UI.hs
app/App/Types/: Config.hs  Core.hs
app/UI/: Types.hs
app/Utils/: Functor.hs  Newtype.hs
cbits/: Main_stub.h
cbits/ghc-7.10.2/: ffitarget.h
cbits/ghc-7.10.2/rts/: SpinLock.h
proj.android-studio/app/jni/: Android.mk  Application.mk  main.cpp
src/Network/GitHub/Gist/: Sync.hs
