name:                gist-sync
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Lingnan Dai
maintainer:          lingnan.d@gmail.com
-- copyright:
category:            CLI
build-type:          Simple
cabal-version:       >=1.10

flag target-android
  description: Build for Android
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Network.GitHub.Gist.Sync
  build-depends:       base >=4.8 && <5
                     , containers
                     , unordered-containers
                     , text
                     , system-filepath
                     , cryptonite
                     , lens
                     , servant-github
                     , time
  default-language:    Haskell2010

executable gist-sync
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5
                     , gist-sync
                     , system-filepath
                     , text
                     , foldl
                     , turtle
                     , cryptonite
                     , containers
                     , regex-tdfa
                     , aeson
                     , brick
                     , yaml
                     , http-client
                     , http-client-tls
                     , mtl
                     , http-client
                     , servant-client
                     , servant-github
                     , bytestring
                     , time
                     , parsec
                     , vty
                     , cereal
                     , memory
  other-modules:       UI.Types
                     , UI
                     , SyncState
                     , SyncStrategy
  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -stubdir cbits -fdefer-typed-holes
  if flag(target-android)
    -- ### additional android options
    -- ### stubdir controls where the stub file is put
    ghc-options: -fPIC -no-hs-main
    ld-options:  -shared -Wl,-soname,libgist_sync.so